# django-x-robots-tag-middleware

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
devscripts/checkers/: coveragerc  run_checks.sh
devscripts/virtualenv/: setup_dev_env.bat  setup_dev_env.sh
docs/: Makefile  conf.py  index.md  index.rst  make.bat
x_robots_tag_middleware/: apps.py  middleware.py  models.py  tests.py  views.py
x_robots_tag_middleware_demo/: __init__.py  requirements.txt  requirements_ci.txt  requirements_dev.txt  settings.py  urls.py  wsgi.py
x_robots_tag_middleware_demo/templates/: index.html
