[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py",
    "*/apps.py",
    "*/devscripts*",
    "*/docs/*",
    "*/local_settings_template.py",
    "*/manage.py",
    "*/migrations/*",
    "*/settings*",
    "*/setup.py",
    "*/tests*",
    "*/wsgi.py"
]

[tool.poetry]
authors = ["Tim White <tim@cyface.com>"]
classifiers = ["Development Status :: 5 - Production/Stable", "Framework :: Django", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Topic :: Internet :: WWW/HTTP"]
description = "Enables returning the X-Robots-Tag header for all URLs. Useful during development to ensure sites are not accidentally indexed before they are ready."
homepage = "https://github.com/cyface/django-x-robots-tag-middleware"
license = "MIT"
name = "django-x-robots-tag-middleware"
packages = [{ include = "x_robots_tag_middleware" }, ]
readme = "README.md"
version = "1.3.3"

[tool.poetry.dependencies]
python = "^3.6"
Django = ">1.10"

[tool.poetry.dev-dependencies]
coverage = "^5.4"
black = "^20.8b1"
